<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Material Design App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="about">Material Design App, is an app designed by Javier Segovia Córdoba</string>
    <string name="action_about">About</string>
    <string name="website">desarrollador-android.com</string>
    <string name="github">GitHub: github.com/dahnark</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
        eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
        sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
        qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
        sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
        Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
        vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</string>

    <string name="title_activity_news_detail">NewsDetail</string>
    <string name="title_activity_news_videoplay">Video Play</string>

    <string-array name="drawer">
        <item>@string/design</item>
        <item>@string/develop</item>
    </string-array>

    <string name="design">Design</string>
    <string name="develop">Develop</string>

    <array name="drawerIcons">
        <item>@drawable/ic_action_design</item>
        <item>@drawable/ic_action_develop</item>
    </array>
    <!-- The user visible name of the application. [CHAR LIMIT=20] -->
    <string name="application_name">ExoPlayer Demo</string>

    <string name="enable_background_audio">Play in background</string>

    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="logging">Logging</string>

    <string name="logging_normal">Normal</string>

    <string name="logging_verbose">Verbose</string>

    <string name="retry">Retry</string>

    <string name="off">[off]</string>

    <string name="on">[on]</string>

    <string name="drm_error_not_supported">Protected content not supported on API levels below 18</string>

    <string name="drm_error_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="drm_error_unknown">An unknown DRM error occurred</string>


    <string name="failed">Playback failed</string>
    <string name="description">Media Controls</string>
</resources>
