<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/statusBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/statusBarHeight"
            android:background="?attr/colorPrimaryDark"
            android:translationZ="4dp" />

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?colorPrimary"
            android:translationZ="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <FrameLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <com.google.android.exoplayer.VideoSurfaceView android:id="@+id/surface_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"/>

            <com.google.android.exoplayer.text.SubtitleView android:id="@+id/subtitles"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="50dp"
                android:visibility="invisible"/>

            <View android:id="@+id/shutter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#88000000"
                android:orientation="vertical">

                <TextView android:id="@+id/player_state_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"/>

                <TextView android:id="@+id/debug_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"/>

                <LinearLayout android:id="@+id/controls_root"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button android:id="@+id/video_controls"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/video"
                        style="@style/DemoButton"
                        android:visibility="gone"
                        android:onClick="showVideoPopup"/>

                    <Button android:id="@+id/audio_controls"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/audio"
                        style="@style/DemoButton"
                        android:visibility="gone"
                        android:onClick="showAudioPopup"/>

                    <Button android:id="@+id/text_controls"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text"
                        style="@style/DemoButton"
                        android:visibility="gone"
                        android:onClick="showTextPopup"/>

                    <Button android:id="@+id/verbose_log_controls"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logging"
                        style="@style/DemoButton"
                        android:onClick="showVerboseLogPopup"/>

                    <Button android:id="@+id/retry_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/retry"
                        android:visibility="gone"
                        style="@style/DemoButton"/>

                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true" />

        </FrameLayout>

    </LinearLayout>


</RelativeLayout>
